// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CrowdfundingCard /> CrowdfundingCard props matches with snapshot 1`] = `
.c1 {
  overflow: hidden;
  position: relative;
  padding-top: 56.25%;
}

.c1 > img {
  width: 100%;
  display: block;
  position: absolute;
  top: 0;
  text-align: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: #fff;
}

.c3 {
  margin-left: 0.625rem;
  background-color: #d8d8d8;
}

.c4 {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c7 {
  white-space: nowrap;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.625rem;
  line-height: 1;
}

.c6 .k-Card__title {
  font-size: 0.8888888888888888rem;
  margin-top: 0.625rem;
}

.c10 {
  display: block;
  border: none;
  background: #222;
  width: 1.25rem;
  height: 0.125rem;
}

.c12 {
  white-space: nowrap;
}

.c8 {
  display: none;
}

.c9 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0.3125rem 0.625rem 0.3125rem 0;
}

.c11 {
  line-height: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 {
  margin-top: 0.9375rem;
  margin-bottom: 0.3125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0 0.625rem;
  line-height: 1;
}

.c14 {
  margin-top: 0.3125rem;
  margin-right: 1.875rem;
}

.c14:last-child {
  margin-right: 0;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.625rem;
  margin-top: 0.3125rem;
  margin-bottom: 1.25rem;
}

.c16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c17 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c18 {
  position: absolute;
  top: 0;
  right: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 0.625rem;
  line-height: 1;
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
}

@media (max-width:47.9375rem) {
  .c2 {
    display: none;
  }
}

@media (min-width:40rem) {
  .c6 .k-Card__title {
    font-size: 1.265625rem;
  }
}

@media (min-width:40rem) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    line-height: 1;
    padding: 0 0.625rem;
    margin-top: 0.625rem;
  }
}

@media (min-width:40rem) {
  .c13 {
    margin-top: 1.25rem;
  }
}

@media (max-width:47.9375rem) {
  .c17 {
    display: none;
  }
}

@media (max-width:47.9375rem) {
  .c18 {
    display: none;
  }
}

@media (min-width:40rem) {
  .c5 {
    min-height: 4.6875rem;
  }
}

<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover c0"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer c1"
  >
    <img
      alt=""
      className="k-Card__image"
      src="#image"
    />
  </div>
  <div
    className="c2"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents c3"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular "
      >
        Owner title
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light "
      >
        Owner description
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <p
        className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
      >
        <span
          className="c7"
          width={0}
        >
          <span />
          <span>
            Lorem ipsum…
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
    
    <div
      className="c8"
    >
      <span
        className="c9 c10"
      />
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular c11"
      >
        <span
          className="c12"
          width={0}
        >
          <span />
          <span>
            Sed ut perspiciatis unde omnis iste natus error Lorem
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
    
  </div>
  <div
    className="c13"
  >
    <div
      className="c14"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light"
      >
        Lorem ipsum…
      </span>
    </div>
    <div
      className="c14"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light"
      >
        Lorem ipsum…
      </span>
    </div>
    <div
      className="c14"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light"
      >
        Lorem ipsum…
      </span>
    </div>
  </div>
  <div
    className="c15"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow={42}
      className="k-Progress c16"
      role="progressbar"
    >
      <div
        className="k-Progress__ramp"
        style={
          Object {
            "height": "4px",
          }
        }
      >
        <div
          className="k-Progress__slider"
          style={
            Object {
              "backgroundColor": "",
              "width": "42%",
            }
          }
        />
      </div>
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-regular c17"
    >
      42 %
    </span>
  </div>
  <div
    className="c18"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Lorem ipsum…
    </span>
  </div>
  
</div>
`;

exports[`<CrowdfundingCard /> CrowdfundingCardWidget props matches with snapshot 1`] = `
.c1 {
  overflow: hidden;
  position: relative;
  padding-top: 56.25%;
}

.c1 > img {
  width: 100%;
  display: block;
  position: absolute;
  top: 0;
  text-align: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: #fff;
}

.c3 {
  margin-left: 0.625rem;
  background-color: #d8d8d8;
}

.c4 {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 0.625rem;
  line-height: 1;
}

.c7 .k-Card__title {
  font-size: 0.8888888888888888rem;
  margin-top: 0.625rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  line-height: 1;
  margin-left: calc(4 * 0.625rem);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  white-space: nowrap;
}

.c10 {
  padding-left: 0.625rem;
  margin: 0.3125rem 0 1.25rem 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: #222;
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  margin-left: 0.3125rem;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: initial;
  width: 100%;
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c12:disabled {
  cursor: not-allowed;
}

.c12 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c12 >:last-child {
  margin-right: 0;
}

.c12 svg {
  fill: #fff;
}

.c12:hover,
.c12:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c12:hover svg,
.c12:focus svg {
  fill: #fff;
}

.c12:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c12:active svg {
  fill: #fff;
}

.c12:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c12:disabled svg {
  fill: #fff;
}

.c0 {
  position: relative;
}

.c5 {
  margin-top: 0.625rem;
  min-height: 4.6875rem;
}

@media (max-width:47.9375rem) {
  .c2 {
    display: none;
  }
}

@media (min-width:40rem) {
  .c7 .k-Card__title {
    font-size: 1.265625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c12 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover c0"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer c1"
  >
    <img
      alt=""
      className="k-Card__image"
      src="#image"
    />
  </div>
  <div
    className="c2"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents c3"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular "
      >
        Owner title
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light "
      >
        Owner description
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <span
          className="k-u-color-font1 k-u-line-height-normal k-u-size-default k-u-weight-bold k-Card__title"
        >
          Lorem ipsum…
        </span>
      </div>
      <div
        className="c8"
      >
        <span
          className="k-u-color-font1 k-u-line-height-normal k-u-size-tiny k-u-weight-bold"
        >
          
          <span
            className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light c9"
          >
            
          </span>
        </span>
      </div>
    </div>
    
    <p
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light c10"
    >
      <span
        className="c11"
        width={0}
      >
        <span />
        <span>
          Sed ut perspiciatis unde omnis iste natus error Lorem
        </span>
        <span
          style={
            Object {
              "left": 0,
              "position": "fixed",
              "top": 0,
              "visibility": "hidden",
            }
          }
        >
          …
        </span>
      </span>
    </p>
  </div>
  <button
    className="c12"
  >
    Lorem ipsum
  </button>
  
  <div
    className="c13"
  >
    <span
      className="k-u-color-background1 k-u-line-height-normal k-u-size-micro k-u-weight-regular c14"
    >
      Sur
      <svg
        className="c15"
        fill="#fff"
        height="30"
        viewBox="0 0 134 30"
        width="80"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          KissKissBankBank
        </title>
        <path
          d="M94.276 26.763h-2.94v-3.236h2.94c1.105 0 1.973.414 1.973 1.658 0 1.164-.81 1.578-1.975 1.578zm-2.836-8.306h2.84c.77 0 1.5.336 1.5 1.36 0 1.007-.867 1.342-1.5 1.342h-2.84v-2.704zm6.052 3.53c1.104-.55 1.854-1.577 1.854-2.84 0-2.94-2.664-3.57-5.09-3.532h-6.59v14.088h6.767c3.02 0 5.485-1.026 5.485-4.38 0-1.598-.927-2.9-2.426-3.335zm-40.966 5.915c-.747 0-1.397-.335-1.397-1.16 0-.807.63-1.122 1.375-1.3.728-.196 1.594-.255 2.065-.55.08 2.104-.45 3.01-2.044 3.01zm5.27-5.31c0-2.892-2.34-3.422-4.76-3.422-1.158 0-2.34.197-3.243.708-.904.53-1.535 1.396-1.593 2.733h3.127c.157-.862.747-1.277 1.67-1.277.69 0 1.614.296 1.614 1.064 0 .628-.313.825-.883.942-2.32.472-5.94.216-5.94 3.54 0 2.105 1.534 3.087 3.48 3.087 1.22 0 2.5-.354 3.365-1.26.04.336.08.65.197.966h3.362c-.393-.807-.393-1.75-.393-2.616v-4.464zM69.4 19.17c-1.217 0-2.593.65-3.203 1.69h-.04v-1.395H62.91v10.207h3.345v-5.567c0-1.12.55-2.182 1.81-2.182 1.828 0 1.67 1.415 1.67 2.812v4.937h3.344v-6.55c0-1.474-.278-3.952-3.68-3.952zm-23.81 7.593h-2.94v-3.236h2.94c1.107 0 1.975.414 1.975 1.658 0 1.164-.81 1.578-1.974 1.578zm-2.94-8.306h2.843c.77 0 1.5.336 1.5 1.36 0 1.007-.87 1.342-1.5 1.342h-2.84v-2.704zm6.158 3.53c1.104-.55 1.854-1.577 1.854-2.84 0-2.94-2.662-3.57-5.09-3.532h-6.59v14.088h6.768c3.02 0 5.485-1.026 5.485-4.38 0-1.598-.927-2.9-2.426-3.335zm35.653-2.522h-3.753l-3.168 3.27V15.63h-3.345v14.04h3.344v-5.238l3.47 5.238h3.923l-4.21-6.352 3.738-3.855zm33.628-.295c-1.22 0-2.596.65-3.206 1.69h-.038v-1.395H111.6v10.207h3.342v-5.567c0-1.12.55-2.182 1.81-2.182 1.828 0 1.67 1.415 1.67 2.812v4.937h3.344v-6.55c0-1.474-.276-3.952-3.677-3.952zm15.057.295h-3.752l-3.17 3.27V15.63h-3.343v14.04h3.342v-5.238l3.47 5.238h3.925l-4.21-6.352 3.737-3.855zm-27.933 8.437c-.746 0-1.395-.335-1.395-1.16 0-.807.63-1.122 1.377-1.3.727-.196 1.592-.255 2.064-.55.08 2.104-.452 3.01-2.045 3.01zm5.27-5.31c0-2.892-2.338-3.422-4.757-3.422-1.16 0-2.34.197-3.245.708-.905.53-1.534 1.396-1.593 2.733h3.126c.16-.862.75-1.277 1.674-1.277.688 0 1.612.296 1.612 1.064 0 .628-.316.825-.886.942-2.32.472-5.938.216-5.938 3.54 0 2.105 1.534 3.087 3.48 3.087 1.22 0 2.498-.354 3.363-1.26.04.336.08.65.196.966h3.363c-.395-.807-.395-1.75-.395-2.616v-4.464zM94.03 2.72h3.34V0h-3.34v2.72zm0 11.32h3.34V3.836h-3.34V14.04zM83.842 6.164l5.405 7.878h4.41L87.8 5.502 92.963 0h-4.327l-4.793 5.107V0h-3.657v14.04h3.657V6.164zm29.724 6.01c-.472 0-.924-.118-1.24-.354-.333-.256-.55-.63-.55-1.14h-3.185c.1 2.85 2.577 3.656 4.995 3.656 2.3 0 4.898-.904 4.898-3.638 0-.845-.53-2.34-2.597-2.753-1.533-.334-3.775-.51-3.775-1.475 0-.708.886-.767 1.436-.767.414 0 .787.08 1.062.255.275.178.432.453.432.885h3.087c-.118-2.654-2.46-3.302-4.7-3.302-2.006 0-4.662.67-4.662 3.127 0 2.753 2.636 2.813 4.74 3.344.59.14 1.632.296 1.632 1.083 0 .806-.924 1.08-1.573 1.08zm-10.476 0c-.47 0-.923-.118-1.238-.354-.335-.256-.55-.63-.55-1.14h-3.186c.097 2.85 2.575 3.656 4.995 3.656 2.3 0 4.898-.904 4.898-3.638 0-.845-.53-2.34-2.596-2.753-1.533-.334-3.774-.51-3.774-1.475 0-.708.884-.767 1.435-.767.414 0 .788.08 1.064.255.274.178.432.453.432.885h3.086c-.118-2.654-2.458-3.302-4.7-3.302-2.006 0-4.66.67-4.66 3.127 0 2.753 2.634 2.813 4.74 3.344.59.14 1.63.296 1.63 1.083 0 .806-.923 1.08-1.572 1.08zM52.825 2.72h3.342V0h-3.342v2.72zm0 11.32h3.342V3.836h-3.342V14.04zM42.638 6.164l5.404 7.878h4.41l-5.857-8.538L51.758 0H47.43l-4.792 5.107V0H38.98v14.04h3.658V6.164zm29.723 6.01c-.47 0-.922-.118-1.236-.354-.335-.256-.55-.63-.55-1.14h-3.187c.1 2.85 2.576 3.656 4.995 3.656 2.302 0 4.898-.904 4.898-3.638 0-.845-.53-2.34-2.596-2.753-1.533-.334-3.775-.51-3.775-1.475 0-.708.883-.767 1.434-.767.413 0 .787.08 1.063.255.274.178.432.453.432.885h3.086c-.117-2.654-2.458-3.302-4.7-3.302-2.006 0-4.66.67-4.66 3.127 0 2.753 2.634 2.813 4.74 3.344.59.14 1.63.296 1.63 1.083 0 .806-.924 1.08-1.573 1.08zm-10.633 0c-.472 0-.924-.118-1.238-.354-.336-.256-.553-.63-.553-1.14H56.75c.1 2.85 2.577 3.656 4.996 3.656 2.3 0 4.897-.904 4.897-3.638 0-.845-.53-2.34-2.597-2.753-1.533-.334-3.775-.51-3.775-1.475 0-.708.887-.767 1.437-.767.414 0 .787.08 1.063.255.275.178.43.453.43.885h3.09c-.12-2.654-2.46-3.302-4.7-3.302-2.007 0-4.662.67-4.662 3.127 0 2.753 2.635 2.813 4.74 3.344.59.14 1.632.296 1.632 1.083 0 .806-.924 1.08-1.574 1.08z"
        />
        <path
          d="M31.118 10.948c-.004-2.185-1.778-3.954-3.962-3.95-1.055 0-2.012.415-2.72 1.087l-6.76 6.778 6.59 6.57c.726.785 1.762 1.274 2.913 1.27 2.184 0 3.95-1.773 3.95-3.96-.004-1.953-1.42-3.573-3.283-3.894 1.86-.327 3.274-1.95 3.27-3.903z"
        />
        <path
          d="M20.276 6.696C18.136 4.42 15.1 3 11.732 3 5.252 3 0 8.252 0 14.732c0 6.48 5.252 11.734 11.732 11.734 3.295 0 6.27-1.36 8.403-3.547l-8.04-8.043 8.18-8.182z"
        />
      </svg>
    </span>
  </div>
</div>
`;
